# aws-sdk-cpp-config

./: CMakeLists.txt  aws_install_process.txt
